--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AK Portfolio</title>
     <style>
+        /* Reset and base styles */
         * {
             margin: 0;
             padding: 0;
@@ -13,8 +14,8 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: #121212;
+            color: #e0e0e0;
             line-height: 1.6;
             padding: 20px;
         }
@@ -25,7 +26,7 @@
         }
 
         h1, h2 {
-            color: #222;
+            color: #ffffff;
             margin-bottom: 10px;
         }
 
@@ -44,15 +45,15 @@
 
         .author-description {
             font-size: 1.1rem;
-            color: #666;
+            color: #b0b0b0;
         }
 
         .project {
             margin-bottom: 30px;
             padding: 20px;
-            background-color: #fff;
+            background-color: #1e1e1e;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .project h2 {
@@ -62,7 +63,7 @@
 
         .project-meta {
             font-size: 0.9rem;
-            color: #555;
+            color: #a0a0a0;
             margin-bottom: 10px;
         }
 
@@ -76,7 +77,7 @@
 
         .project-gallery img {
             height: 350px;
-			max-width: 720px;
+            max-width: 720px;
             border-radius: 8px;
             object-fit: cover;
         }
@@ -88,11 +89,11 @@
 
         .project-details {
             font-size: 0.9rem;
-            color: #555;
+            color: #a0a0a0;
         }
 
         .project-link {
-            color: #1e90ff;
+            color: #80b3ff;
             text-decoration: none;
         }
 
@@ -106,36 +107,36 @@
         }
 
         .project-gallery::-webkit-scrollbar-track {
-            background: #ddd;
+            background: #333;
             border-radius: 4px;
         }
 
         .project-gallery::-webkit-scrollbar-thumb {
-            background: #888;
+            background: #666;
             border-radius: 4px;
         }
-		
-		.overlay {
-			display: none; /* Hidden by default */
-			position: fixed;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black */
-			justify-content: center;
-			align-items: center;
-			z-index: 1000; /* Sits on top of other content */
-		}
 
-		.overlay img {
-			max-width: 90%; /* Responsive image size */
-			max-height: 90%;
-			border-radius: 8px;
-			box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-			cursor: zoom-out; /* Indicates that clicking will close the image */
-		}
-		
+        /* Overlay styling for full-screen images */
+        .overlay {
+            display: none; /* Hidden by default */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .overlay img {
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+            cursor: zoom-out;
+        }
     </style>
 </head>
 <script>
@@ -157,7 +158,7 @@
     <!-- Author Section -->
     <div class="author">
         <h1>Adam Kolar</h1>
-        <p class="author-description">Game developer (with focus on coding) with 10 years of experience in creating video games. Skilled in Unity, Blender, and various design tools.</p>
+        <p class="author-description">Game developer (with focus on coding) with 10 years of experience in video game creation. Skilled in Unity, Blender, and various other tools.</p>
     </div>
 
     <!-- Projects Section -->
@@ -174,7 +175,7 @@
                 <img src="project1_img6.png" alt="Project Image 6" onclick="openOverlay(this.src)">
                 <img src="project1_img7.png" alt="Project Image 7" onclick="openOverlay(this.src)">
             </div>
-            <p class="project-summary">Abbreviation for "Završni Rad". It was made for a final project for my highschool. This game is probably a first complete game I made, it's a simple 3D platformer where player is a dinosaur. Special thing about this game is that it had a level editor so players could make their own levels and even add new 3D objects into the game.</p>
+            <p class="project-summary">"ZR" stands for "Završni Rad" and was created as a final project for my high school. This was likely the first complete game I made—a simple 3D platformer where the player controls a dinosaur. Special thing about this game is that it had a level editor so players could make their own levels and even add new 3D objects into the game.</p>
             <p class="project-details"><a href="https://github.com/Marshal666/ZR" class="project-link">Source code & Game download</a></p>
         </div>
         <div class="project">
@@ -188,7 +189,7 @@
                 <img src="project2_img5.png" alt="Project Image 5" onclick="openOverlay(this.src)">
                 <img src="project2_img6.png" alt="Project Image 6" onclick="openOverlay(this.src)">
             </div>
-            <p class="project-summary">Another simple platformer made for university subject called "Projekt R". First time I worked on a game in a team too. Others in the team had somewhat limited experience in Unity compared to me so I stepped up and took the role of a team leader.</p>
+            <p class="project-summary">A simple platformer created for a university course called 'Projekt R'. This was also my first experience working on a game in a team. Since others in the team had less experience in Unity than I did, I took on the role of team leader.</p>
             <p class="project-details"><a href="https://gitlab.com/AdamK0l4r/projektr" class="project-link">Source code</a></p>
 			<p class="project-details"><a href="https://mega.nz/file/pwEigZIY#s1J3Wxl33Efg7QghNBAYy0E-it_bo1QQxx9mJP1Bed8" class="project-link">Game download</a></p>
         </div>
@@ -204,7 +205,7 @@
                 <img src="project3_img5.png" alt="Project Image 5" onclick="openOverlay(this.src)">
                 <img src="project3_img6.png" alt="Project Image 6" onclick="openOverlay(this.src)">
             </div>
-            <p class="project-summary">2D multiplayer game where players are pirate ships fighting each other.</p>
+            <p class="project-summary">A 2D multiplayer game where players control pirate ships and battle each other within different game modes.</p>
 			<p class="project-details"><a href="https://mega.nz/file/8lFHAbpQ#PBypmec94_a_Z4s_kVj9yJwmSm-Cc6Vg6S2d4qK2Q3E" class="project-link">Game download</a></p>
         </div>
 		
@@ -233,7 +234,7 @@
                 <img src="project5_img3.png" alt="Project Image 3" onclick="openOverlay(this.src)">
                 <img src="project5_img4.png" alt="Project Image 4" onclick="openOverlay(this.src)">
             </div>
-            <p class="project-summary">3D tank game somewhat similar to War Thunder. It features full multiplayer support (up to 4 players in this case) and rather detailed damage model. It was made as a final project for getting my masters degree.</p>
+            <p class="project-summary">A 3D tank game somewhat similar to War Thunder. It features full multiplayer support (up to 4 players in this case) and rather detailed damage model. It was made as a final project for getting my masters degree.</p>
 			<p class="project-details"><a href="https://github.com/Marshal666/DipRadProjFusion" class="project-link">Source code & Game download</a></p>
         </div>
 		
@@ -264,7 +265,7 @@
             <div class="project-gallery">
                 <img src="project7_img1.png" alt="Project Image 1" onclick="openOverlay(this.src)">
             </div>
-            <p class="project-summary">Infinite runner (or in this case, a jumper) game made for Android, it was fairly finished game. However, 15 year old me decided to clean up disk space and thus the project was lost forever. The only remaining thing I have of it is this image.</p>
+            <p class="project-summary">Infinite runner (or, in this case, jumper) game made for Android, it was fairly close to being complete; however, 15 year old me decided to clean up disk space and thus the project was lost forever. The only remaining thing I have of it is this image.</p>
         </div>
 		
     </div>
