--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 		
 		<div class="project">
             <h2>First (and unfinished) Project: Cube</h2>
-            <p class="project-meta">Years: 2014-2015 | Team Size: " | Roles: Programmer, Game Designer and 3D Modeller | Engine: Unity</p>
+            <p class="project-meta">Years: 2014-2015 | Team Size: 2 | Roles: Programmer, Game Designer and 3D Modeller | Engine: Unity</p>
             <div class="project-gallery">
                 <img src="project6_img1.jpg" alt="Project Image 1" onclick="openOverlay(this.src)">
                 <img src="project6_img2.jpg" alt="Project Image 2" onclick="openOverlay(this.src)">
