add BK2FSpy project info

--- a/index.html
+++ b/index.html
@@ -239,6 +239,21 @@
         </div>
 		
 		<div class="project">
+            <h2>BK2 Unit Stats Compare</h2>
+            <p class="project-meta">Year: 2024 | Team Size: 1 | Roles: Programmer | Written in Python + Tkinter</p>
+            <div class="project-gallery">
+                <img src="project8_img1.png" alt="Project Image 1" onclick="openOverlay(this.src)">
+                <img src="project8_img2.png" alt="Project Image 2" onclick="openOverlay(this.src)">
+                <img src="project8_img3.png" alt="Project Image 3" onclick="openOverlay(this.src)">
+                <img src="project8_img4.png" alt="Project Image 4" onclick="openOverlay(this.src)">
+                <img src="project8_img5.png" alt="Project Image 5" onclick="openOverlay(this.src)">
+                <img src="project8_img6.png" alt="Project Image 6" onclick="openOverlay(this.src)">
+            </div>
+            <p class="project-summary">A simple modding tool for the game Blitzkrieg 2 that checks the balance of in-game units as balancing is a rather difficult task for modders. It reads the game data in the same way the game itself does. It's mostly written in Python + some C++ where good performance was necessary.</p>
+			<p class="project-details"><a href="https://github.com/Marshal666/BK2FSpy" class="project-link">Source code & Releases</a></p>
+        </div>
+		
+		<div class="project">
             <h2>First (and unfinished) Project: Cube</h2>
             <p class="project-meta">Years: 2014-2015 | Team Size: 2 | Roles: Programmer, Game Designer and 3D Modeller | Engine: Unity</p>
             <div class="project-gallery">
